--- a/project/package.json
+++ b/project/package.json
@@ -1,8 +1,12 @@
 {
   "name": "formcraft",
+  "homepage": "https://Mohitjadaun2026.github.io/formcraft",
   "private": false,
   "version": "1.0.0",
   "type": "module",
+
+{
+  "homepage": "https://Mohitjadaun2026.github.io/formcraft",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,7 +14,10 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
-  },
+  }
+}
+
+  
   "dependencies": {
     "gh-pages": "^6.1.1",
     "lucide-react": "^0.344.0",
